Add links to the User Manual installer again

--- a/downloads/Windows.xhtml
+++ b/downloads/Windows.xhtml
@@ -11,11 +11,28 @@ Simončič</a>.</p>
 
 <h3>GIMP User Manual</h3>
 
-<p>Due to its size, the user manual is not included with the GIMP
-  installers and has been split into language-specific packages. <a 
-  href="http://gimp-win.sourceforge.net/stable.html">Installer
-  packages</a> are provided by Jernej Simončič.
-</p>
+<ul>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-zh_CN-setup.exe/download" class="sourceforge_accelerator_link">Chinese Simplified</a> (25.9 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ca-setup.exe/download" class="sourceforge_accelerator_link">Catalan</a> (25.9 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-hr-setup.exe/download" class="sourceforge_accelerator_link">Croatian</a> (25.8 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-da-setup.exe/download" class="sourceforge_accelerator_link">Danish</a> (25.9 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-nl-setup.exe/download" class="sourceforge_accelerator_link">Dutch</a> (25.9 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-en-setup.exe/download" class="sourceforge_accelerator_link">English</a> (25.9 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-en_GB-setup.exe/download" class="sourceforge_accelerator_link">English (United Kingdom)</a> (25.8 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-fi-setup.exe/download" class="sourceforge_accelerator_link">Finnish</a> (25.9 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-fr-setup.exe/download" class="sourceforge_accelerator_link">French</a> (27.4 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-de-setup.exe/download" class="sourceforge_accelerator_link">German</a> (29.7 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-it-setup.exe/download" class="sourceforge_accelerator_link">Italian</a> (32.7 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ja-setup.exe/download" class="sourceforge_accelerator_link">Japanese</a> (23.9 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ko-setup.exe/download" class="sourceforge_accelerator_link">Korean</a> (26.5 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-lt-setup.exe/download" class="sourceforge_accelerator_link">Lithuanian</a> (27.3 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-nn-setup.exe/download" class="sourceforge_accelerator_link">Norwegian Nynorsk</a> (22.4 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-pl-setup.exe/download" class="sourceforge_accelerator_link">Polish</a> (25.9 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ru-setup.exe/download" class="sourceforge_accelerator_link">Russian</a> (26.4 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-sl-setup.exe/download" class="sourceforge_accelerator_link">Slovenian</a> (25.9 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-es-setup.exe/download" class="sourceforge_accelerator_link">Spanish</a> (26.4 MB)</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-sv-setup.exe/download" class="sourceforge_accelerator_link">Swedish</a> (26.3 MB)</li>
+</ul>
 
 <script>
 (function() {
