Update Windows download link to 2.8.4

--- a/downloads/Windows.xhtml
+++ b/downloads/Windows.xhtml
@@ -6,7 +6,7 @@ href="http://gimp-win.sourceforge.net/">Windows installers by Jernej
 Simončič</a>.</p>
 
 <ul>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20%2B%20GTK%2B%20%28stable%20release%29/GIMP%202.8.2/gimp-2.8.2-setup-1.exe/download" class="sourceforge_accelerator_link">Download GIMP 2.8.2</a> &ndash; Installer for Windows XP SP3 or later</li>
+<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20%2B%20GTK%2B%20%28stable%20release%29/GIMP%202.8.4/gimp-2.8.4-setup.exe/download" class="sourceforge_accelerator_link">Download GIMP 2.8.4</a> &ndash; Installer for Windows XP SP3 or later</li>
 </ul>
 
 <h3>GIMP User Manual</h3>
