--- a/downloads/Windows.xhtml
+++ b/downloads/Windows.xhtml
@@ -1,6 +1,6 @@
 <h2>GIMP for Windows</h2>
 
-<p>The GIMP team doesn't officially provide any Windows binaries. You can,
+<p>The GIMP team doesn't officially provide any Windows installers. You can,
 however, install GIMP easily using the <a
 href="http://gimp-win.sourceforge.net/">Windows installers by Jernej
 Simončič</a>.</p>
