Update OSX downloads page

--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -9,12 +9,12 @@ Since the 2.8.2 version GIMP runs on OSX natively. No X11 environment is require
 <p>Currently we have two source of installers.</p>
 
 <p>
-A GIMP 2.8 DMG installer by Clayton Walker, stock GIMP build without any add-ons. 
+A GIMP 2.8 DMG installer by Clayton Walker, stock GIMP build without python or any add-ons. 
 Just open the downloaded DMG and drag "GIMP.app" into your "Applications" folder.
 </p>
 
 <ul>
-<li><a href="ftp://ftp.gimp.org/pub/gimp/v2.8/osx/gimp-2.8.2-dmg-2.dmg">Download gimp-2.8.2-dmg-2.dmg</a>
+<li><a href="ftp://ftp.gimp.org/pub/gimp/v2.8/osx/gimp-2.8.4-nopython-dmg-1.dmg">Download gimp-2.8.4-nopython-dmg-1.dmg</a>
 </ul>
 
 <p>
