--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -14,7 +14,7 @@ Just open the downloaded DMG and drag "GIMP.app" into your "Applications" folder
 </p>
 
 <ul>
-<li><a href="ftp://ftp.gimp.org/pub/gimp/v2.8/osx/gimp-2.8.4-nopython-dmg-1.dmg">Download gimp-2.8.4-nopython-dmg-1.dmg</a>
+<li><a href="ftp://ftp.gimp.org/pub/gimp/v2.8/osx/gimp-2.8.4-nopython-dmg-1.dmg">Download gimp-2.8.4-nopython-dmg-1.dmg</a></li>
 </ul>
 
 <p>
@@ -22,7 +22,7 @@ Just open the downloaded DMG and drag "GIMP.app" into your "Applications" folder
 </p>
  
 <ul>
-<li><a href="http://gimp.lisanet.de/Website/Download.html">Download GIMP 2.8</a>
+<li><a href="http://gimp.lisanet.de/Website/Download.html">Download GIMP 2.8</a></li>
 </ul>
 
 <h3>Macports</h3>
