Add required type attribute to SF accelerator script element

--- a/downloads/Windows.xhtml
+++ b/downloads/Windows.xhtml
@@ -34,7 +34,7 @@ Simončič</a>.</p>
 <li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-sv-setup.exe/download" class="sourceforge_accelerator_link">Swedish</a> (26.3 MB)</li>
 </ul>
 
-<script>
+<script type="text/javascript">
 (function() {
   var script = document.createElement('script');
   script.src = '//sourceforge.net/accelerator/js?partner_id=71';
