Commented out the links to 2.9 tarballs and release notes (both currently unavailable).
Added the link to nightly builds for Windows.

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -49,11 +49,13 @@
 
 	<h2>Development snapshots</h2>
 
-	<p>GIMP 2.9.0 is a snapshot of current development towards GIMP 2.10. The
-	source code is available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.9/">ftp://ftp.gimp.org/pub/gimp/v2.9/</a>. Please make sure you read the <a href="/release-notes/gimp-2.9.html">Release Notes for GIMP 2.9</a>.
-	</p>
+<!-- 	<p>GIMP 2.9.0 is a snapshot of current development towards GIMP 2.10. The
+	source code will be available from <a href="ftp://ftp.gimp.org/pub/gimp/v2.9/">ftp://ftp.gimp.org/pub/gimp/v2.9/</a>. Please make sure you read the <a href="/release-notes/gimp-2.9.html">Release Notes for GIMP 2.9</a>.
+	</p> -->
 
-	<p>Sorry, there are no releases of the 2.9 development version yet.</p>
+	<p>There are no releases of the 2.9 development version yet.</p>
+
+	<p>Nightly builds for Windows are available at <a href="http://nightly.darkrefraction.com/gimp/" target="_blank">darkrefraction.com</a>. Please use them at your own risk.</p>
 	<!--
 	<p>To allow you to check the integrity of the tarballs, here are the
 	MD5 sums of the latest releases:
