Better wording regarding nightly bulds,

--- a/downloads/source.xhtml
+++ b/downloads/source.xhtml
@@ -55,7 +55,7 @@
 
 	<p>There are no releases of the 2.9 development version yet.</p>
 
-	<p>Nightly builds for Windows are available at <a href="http://nightly.darkrefraction.com/gimp/" target="_blank">darkrefraction.com</a>. Please use them at your own risk.</p>
+	<p>Nightly builds for Windows are available at <a href="http://nightly.darkrefraction.com/gimp/" target="_blank">darkrefraction.com</a>. This is unstable software, please use it at your own risk.</p>
 	<!--
 	<p>To allow you to check the integrity of the tarballs, here are the
 	MD5 sums of the latest releases:
