Change windows download description and file locations

--- a/downloads/Windows.xhtml
+++ b/downloads/Windows.xhtml
@@ -1,45 +1,36 @@
 <h2>GIMP for Windows</h2>
 
-<p>The GIMP team doesn't officially provide any Windows installers. You can,
-however, install GIMP easily using the <a
-href="http://gimp-win.sourceforge.net/">Windows installers by Jernej
-Simončič</a>.</p>
+<p>The Windows installer packages by Jernej Simončič are now distributed from the GIMP FTP server (<a href="ftp://ftp.gimp.org">ftp.gimp.org</a>) and its <a href="#mirrors">mirror servers</a>. The ads on the previously used site have tricked too many users into downloading wrong apps or installers that have been tampered with, so we decided to cut that out.</p>
 
 <ul>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20%2B%20GTK%2B%20%28stable%20release%29/GIMP%202.8.6/gimp-2.8.6-setup.exe/download" class="sourceforge_accelerator_link">Download GIMP 2.8.6</a> &ndash; Installer for Windows XP SP3 or later</li>
+<li>Download GIMP 2.8.8 via <a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/gimp-2.8.8-setup.exe">HTTP</a> or <a href="ftp://ftp.gimp.org/pub/gimp/v2.8/windows/gimp-2.8.8-setup.exe">FTP</a> &ndash; Installer for Windows XP SP3 or later</li>
 </ul>
 
 <h3>GIMP User Manual</h3>
 
-<ul>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-zh_CN-setup.exe/download" class="sourceforge_accelerator_link">Chinese Simplified</a> (25.9 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ca-setup.exe/download" class="sourceforge_accelerator_link">Catalan</a> (25.9 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-hr-setup.exe/download" class="sourceforge_accelerator_link">Croatian</a> (25.8 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-da-setup.exe/download" class="sourceforge_accelerator_link">Danish</a> (25.9 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-nl-setup.exe/download" class="sourceforge_accelerator_link">Dutch</a> (25.9 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-en-setup.exe/download" class="sourceforge_accelerator_link">English</a> (25.9 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-en_GB-setup.exe/download" class="sourceforge_accelerator_link">English (United Kingdom)</a> (25.8 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-fi-setup.exe/download" class="sourceforge_accelerator_link">Finnish</a> (25.9 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-fr-setup.exe/download" class="sourceforge_accelerator_link">French</a> (27.4 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-de-setup.exe/download" class="sourceforge_accelerator_link">German</a> (29.7 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-it-setup.exe/download" class="sourceforge_accelerator_link">Italian</a> (32.7 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ja-setup.exe/download" class="sourceforge_accelerator_link">Japanese</a> (23.9 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ko-setup.exe/download" class="sourceforge_accelerator_link">Korean</a> (26.5 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-lt-setup.exe/download" class="sourceforge_accelerator_link">Lithuanian</a> (27.3 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-nn-setup.exe/download" class="sourceforge_accelerator_link">Norwegian Nynorsk</a> (22.4 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-pl-setup.exe/download" class="sourceforge_accelerator_link">Polish</a> (25.9 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ru-setup.exe/download" class="sourceforge_accelerator_link">Russian</a> (26.4 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-sl-setup.exe/download" class="sourceforge_accelerator_link">Slovenian</a> (25.9 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-es-setup.exe/download" class="sourceforge_accelerator_link">Spanish</a> (26.4 MB)</li>
-<li><a href="http://sourceforge.net/projects/gimp-win/files/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-sv-setup.exe/download" class="sourceforge_accelerator_link">Swedish</a> (26.3 MB)</li>
-</ul>
+<p>Uploads in progress, will be available soon...</p>
 
-<script type="text/javascript">
-(function() {
-  var script = document.createElement('script');
-  script.src = '//sourceforge.net/accelerator/js?partner_id=71';
-  script.defer = true;
-  var s = document.getElementsByTagName('script')[0];
-  s.parentNode.insertBefore(script, s);
-})();
-</script> 
+<!--
+<ul>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-zh_CN-setup.exe/download">Chinese Simplified</a> (25.9 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ca-setup.exe/download">Catalan</a> (25.9 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-hr-setup.exe/download">Croatian</a> (25.8 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-da-setup.exe/download">Danish</a> (25.9 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-nl-setup.exe/download">Dutch</a> (25.9 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-en-setup.exe/download">English</a> (25.9 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-en_GB-setup.exe/download">English (United Kingdom)</a> (25.8 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-fi-setup.exe/download">Finnish</a> (25.9 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-fr-setup.exe/download">French</a> (27.4 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-de-setup.exe/download">German</a> (29.7 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-it-setup.exe/download">Italian</a> (32.7 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ja-setup.exe/download">Japanese</a> (23.9 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ko-setup.exe/download">Korean</a> (26.5 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-lt-setup.exe/download">Lithuanian</a> (27.3 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-nn-setup.exe/download">Norwegian Nynorsk</a> (22.4 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-pl-setup.exe/download">Polish</a> (25.9 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ru-setup.exe/download">Russian</a> (26.4 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-sl-setup.exe/download">Slovenian</a> (25.9 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-es-setup.exe/download">Spanish</a> (26.4 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-sv-setup.exe/download">Swedish</a> (26.3 MB)</li>
+</ul>
+-->
