Added line pointing out 32 & 64 bit installs included in one download.
Signed-off-by: Pat David <patdavid@src.gnome.org>

--- a/downloads/Windows.xhtml
+++ b/downloads/Windows.xhtml
@@ -2,6 +2,10 @@
 
 <p>The Windows installer packages by Jernej Simončič are now distributed from the GIMP FTP server (<a href="ftp://ftp.gimp.org">ftp.gimp.org</a>) and its <a href="#mirrors">mirror servers</a>. The ads on the previously used site have tricked too many users into downloading wrong apps or installers that have been tampered with, so we decided to cut that out.</p>
 
+<p>
+The installer contains both 32 bit and 64 bit versions of GIMP, and will install the appropriate one.
+</p>
+
 <ul>
 <li>Download GIMP 2.8.8 via <a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/gimp-2.8.8-setup.exe">HTTP</a> or <a href="ftp://ftp.gimp.org/pub/gimp/v2.8/windows/gimp-2.8.8-setup.exe">FTP</a> &ndash; Installer for Windows XP SP3 or later</li>
 </ul>
