download: add Windows manuals

--- a/downloads/Windows.xhtml
+++ b/downloads/Windows.xhtml
@@ -12,29 +12,26 @@ The installer contains both 32 bit and 64 bit versions of GIMP, and will install
 
 <h3>GIMP User Manual</h3>
 
-<p>Uploads in progress, will be available soon...</p>
-
-<!--
 <ul>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-zh_CN-setup.exe/download">Chinese Simplified</a> (25.9 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ca-setup.exe/download">Catalan</a> (25.9 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-hr-setup.exe/download">Croatian</a> (25.8 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-da-setup.exe/download">Danish</a> (25.9 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-nl-setup.exe/download">Dutch</a> (25.9 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-en-setup.exe/download">English</a> (25.9 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-en_GB-setup.exe/download">English (United Kingdom)</a> (25.8 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-fi-setup.exe/download">Finnish</a> (25.9 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-fr-setup.exe/download">French</a> (27.4 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-de-setup.exe/download">German</a> (29.7 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-it-setup.exe/download">Italian</a> (32.7 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ja-setup.exe/download">Japanese</a> (23.9 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ko-setup.exe/download">Korean</a> (26.5 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-lt-setup.exe/download">Lithuanian</a> (27.3 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-nn-setup.exe/download">Norwegian Nynorsk</a> (22.4 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-pl-setup.exe/download">Polish</a> (25.9 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-ru-setup.exe/download">Russian</a> (26.4 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-sl-setup.exe/download">Slovenian</a> (25.9 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-es-setup.exe/download">Spanish</a> (26.4 MB)</li>
-<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/windows/GIMP%20Help%202/GIMP%20Help%202.8.0/gimp-help-2-2.8.0-sv-setup.exe/download">Swedish</a> (26.3 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-zh_CN-setup.exe">Chinese Simplified</a> (24.3 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-ca-setup.exe">Catalan</a> (24.2 MB)</li>
+<!-- li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-hr-setup.exe">Croatian</a> (25.8 MB)</li -->
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-da-setup.exe">Danish</a> (24.2 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-nl-setup.exe">Dutch</a> (24.3 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-en-setup.exe">English</a> (24.2 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-en_GB-setup.exe">English (United Kingdom)</a> (24.2 MB)</li>
+<!-- li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-fi-setup.exe">Finnish</a> (25.9 MB)</li -->
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-fr-setup.exe">French</a> (25.7 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-de-setup.exe">German</a> (28.0 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-it-setup.exe">Italian</a> (30.2 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-ja-setup.exe">Japanese</a> (23.6 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-ko-setup.exe">Korean</a> (24.9 MB)</li>
+<!-- li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-lt-setup.exe">Lithuanian</a> (27.3 MB)</li -->
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-nn-setup.exe">Norwegian Nynorsk</a> (20.9 MB)</li>
+<!-- li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-pl-setup.exe">Polish</a> (25.9 MB)</li -->
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-ru-setup.exe">Russian</a> (24.9 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-sl-setup.exe">Slovenian</a> (24.3 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-es-setup.exe">Spanish</a> (24.9 MB)</li>
+<li><a href="http://ftp.gimp.org/pub/gimp/help/windows/2.8/2.8.1/gimp-help-2-2.8.1-sv-setup.exe">Swedish</a> (24.7 MB)</li>
 </ul>
--->
+
