--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -9,20 +9,20 @@ Since the 2.8.2 version GIMP runs on OSX natively. No X11 environment is require
 <p>Currently we have two source of installers.</p>
 
 <p>
-A GIMP 2.8 DMG installer by Clayton Walker, stock GIMP build without python or any add-ons. 
-Just open the downloaded DMG and drag "GIMP.app" into your "Applications" folder.
+  A GIMP 2.8 DMG installer by Clayton Walker, stock GIMP build without any add-ons. 
+  Just open the downloaded DMG and drag "GIMP.app" into your "Applications" folder.
 </p>
 
 <ul>
-<li><a href="ftp://ftp.gimp.org/pub/gimp/v2.8/osx/gimp-2.8.4-nopython-dmg-1.dmg">Download gimp-2.8.4-nopython-dmg-1.dmg</a></li>
+<li><a href="http://ftp.gimp.org/pub/gimp/v2.8/osx/gimp-2.8.10-dmg-1.dmg">Download GIMP 2.8 from gimp.org</a>. Also available via <a href="ftp://ftp.gimp.org/pub/gimp/v2.8/osx/gimp-2.8.10-dmg-1.dmg">FTP</a></li>
 </ul>
 
 <p>
-	A build by <a href="http://gimp.lisanet.de/">Simone Karin Lehmann</a>, with some extra plug-ins.
+  A build by <a href="http://gimp.lisanet.de/">Simone Karin Lehmann</a>, with some extra plug-ins and changes.
 </p>
  
 <ul>
-<li><a href="http://gimp.lisanet.de/Website/Download.html">Download GIMP 2.8</a></li>
+<li><a href="http://gimp.lisanet.de/Website/Download.html">Download GIMP 2.8 from lisanet.de</a></li>
 </ul>
 
 <h3>Macports</h3>
