Rephrased Linux install description to avoid "latest stable"
The user may not get anything new, because distros ship a specific
GIMP release with a distro release.

--- a/downloads/Linux.xhtml
+++ b/downloads/Linux.xhtml
@@ -4,24 +4,27 @@
 <p>It's very likely your Unix-like system such as a GNU/Linux distribution
 already comes with a GIMP package. It is a preferred method of installing GIMP,
 as the distribution maintainers take care of all the dependencies and bug fix
-updates.</p>
+updates. Please note that many distros decide to pin a specific version of
+GIMP to their releases.</p>
 
 <h3>Ubuntu, Debian</h3>
 
-<p>Ubuntu or Debian users can simply run <code>apt-get install gimp</code> to
-get the latest stable release of GIMP. Ubuntu users can also install GIMP from <a href="https://apps.ubuntu.com/cat/applications/gimp/" target="_blank">Software Centre</a>.</p>
+<p>Ubuntu or Debian users can run <code>apt-get install gimp</code> to install
+GIMP. Ubuntu users may also install GIMP from <a
+href="https://apps.ubuntu.com/cat/applications/gimp/" target="_blank">Software 
+Centre</a>, this includes recent GIMP versions from PPAs.</p>
 
 <h3>openSUSE</h3>
 <p>SUSE users can install GIMP by running <code>yast -i gimp</code> or
 <code>zypper in gimp</code>, depending on the distribution version.</p>
 
 <h3>Fedora</h3>
-<p>Similarly to the above, Fedora users can install the latest stable GIMP by
+<p>Similarly to the above, Fedora users can install GIMP by
 running <code>yum install gimp</code>.</p>
 
 <h3>Mandriva</h3>
-<p>Mandriva Linux users can install the latest stable GIMP by running
-<code>urpmi gimp</code>.</p>
+<p>Mandriva Linux users can install GIMP by running 
+<code>urpmi gimp</code>.</p> 
 
 <h3>BSD</h3>
 
