--- a/downloads/Mac.xhtml
+++ b/downloads/Mac.xhtml
@@ -6,7 +6,7 @@ Since the 2.8.2 version GIMP runs on OSX natively. No X11 environment is require
 
 <h3>Native builds</h3>
 
-<p>Currently we have two source of installers.</p>
+<p>Currently there are two main installers:</p>
 
 <p>
   A GIMP 2.8 DMG installer by Clayton Walker, stock GIMP build without any add-ons. 
@@ -42,6 +42,19 @@ port file</a> mentions 2.8.10, and appears to be maintained, however.</p>
 <ul>
   <li><a href="http://macports.org">Download Macports</a>.</li>
 </ul>
+
+
+<h3>Homebrew</h3>
+
+<p>Homebrew is similar to Macports and provides packages (aka formulas) to
+install, either by compiling them from source or by using pre-made
+binaries. While there appears to be no formula for GIMP itself, there are
+reports that all dependencies are available and.</p> 
+
+<ul>
+  <li><a href="http://brew.sh">Download Homebrew</a>.</li>
+</ul>
+
 
 <h3>Fink</h3>
 
